# cmake-aubio

./: .gitignore
aubio/: .gitignore  .project  local.properties  settings.gradle
aubio/app/: build.gradle
aubio/app/src/androidTest/java/com/example/aubio/: ExampleInstrumentedTest.java
aubio/app/src/main/: AndroidManifest.xml
aubio/app/src/main/cpp/: CMakeLists.txt  Test.c  com_example_aubio_JniUtils.h  cvec.c  fmat.c  fvec.c  lvec.c  mathutils.c  musicutils.c  notes.c  pitch.c  vecutils.c
aubio/app/src/main/cpp/io/: CMakeLists.txt  ioutils.c  sink.c  source.c
aubio/app/src/main/cpp/notes/: CMakeLists.txt  notes.c  notes.h
aubio/app/src/main/cpp/onset/: CMakeLists.txt  onset.c  peakpicker.c
aubio/app/src/main/cpp/pitch/: CMakeLists.txt  pitch.c  pitchfcomb.c  pitchmcomb.c  pitchschmitt.c  pitchspecacf.c  pitchyin.c  pitchyinfast.c  pitchyinfft.c
aubio/app/src/main/cpp/spectral/: CMakeLists.txt  awhitening.c  dct.c  dct_accelerate.c  dct_fftw.c  dct_ipp.c  dct_ooura.c  dct_plain.c  fft.c  filterbank.c  filterbank_mel.c  mfcc.c  phasevoc.c  specdesc.c  statistics.c  tss.c
aubio/app/src/main/cpp/synth/: CMakeLists.txt  sampler.c  wavetable.c
aubio/app/src/main/cpp/tempo/: CMakeLists.txt  beattracking.c  tempo.c
aubio/app/src/main/cpp/temporal/: CMakeLists.txt  a_weighting.c  c_weighting.c  filter.c  resampler.c
aubio/app/src/main/cpp/utils/: CMakeLists.txt  hist.c  log.c  parameter.c  scale.c
aubio/app/src/main/res/layout/: activity_main.xml
aubio/app/src/main/res/values/: ids.xml  strings.xml
aubio/gradle/wrapper/: gradle-wrapper.properties
(+4 files in other folders)
